--- a/cfg/yolo-voc.cfg
+++ b/cfg/yolo-voc.cfg
@@ -19,8 +19,8 @@ learning_rate=0.001
 burn_in=1000
 max_batches = 80200
 policy=steps
-steps=40000,60000
-scales=.1,.1
+steps=-1,500,40000,60000
+scales=0.1,10,.1,.1
 
 [convolutional]
 batch_normalize=1
