--- a/cfg/tiny-yolo-voc.cfg
+++ b/cfg/tiny-yolo-voc.cfg
@@ -19,6 +19,7 @@ scales=.1,10,.1,.1
 
 [convolutional]
 batch_normalize=1
+bayes=1
 filters=16
 size=3
 stride=1
@@ -30,6 +31,7 @@ size=2
 stride=2
 
 [convolutional]
+bayes=1
 batch_normalize=1
 filters=32
 size=3
@@ -42,6 +44,7 @@ size=2
 stride=2
 
 [convolutional]
+bayes=1
 batch_normalize=1
 filters=64
 size=3
@@ -54,6 +57,7 @@ size=2
 stride=2
 
 [convolutional]
+bayes=1
 batch_normalize=1
 filters=128
 size=3
@@ -66,6 +70,7 @@ size=2
 stride=2
 
 [convolutional]
+bayes=1
 batch_normalize=1
 filters=256
 size=3
@@ -78,6 +83,7 @@ size=2
 stride=2
 
 [convolutional]
+bayes=1
 batch_normalize=1
 filters=512
 size=3
@@ -90,6 +96,7 @@ size=2
 stride=1
 
 [convolutional]
+bayes=1
 batch_normalize=1
 filters=1024
 size=3
@@ -100,6 +107,7 @@ activation=leaky
 ###########
 
 [convolutional]
+bayes=1
 batch_normalize=1
 size=3
 stride=1
@@ -108,6 +116,7 @@ filters=1024
 activation=leaky
 
 [convolutional]
+bayes=0
 size=1
 stride=1
 pad=1
